Programa funcionando e melhorado, ainda sem gráficos